# laufwise_platform

./: .gitignore  CLAUDE.md  PLATFORM_PLAN.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  approvals.py  health.py  router.py  runbooks.py  runs.py
backend/app/control_plane/: __init__.py  runtime.py
backend/app/core/: __init__.py  errors.py  logging.py
backend/app/identity/: __init__.py  base.py
backend/app/memory/: __init__.py  base.py
backend/app/observability/: __init__.py  trace.py
backend/app/providers/: __init__.py  base.py  memory.py
backend/app/schemas/: __init__.py  run.py  runbook.py
backend/app/workloads/: __init__.py  base.py
backend/app/workloads/conversational/: __init__.py
backend/tests/: __init__.py  test_health.py
frontend/: .env.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/runs/: page.tsx
frontend/src/lib/: api.ts  sample-runs.ts  status.ts
frontend/src/types/: index.ts
