[project]
name = "laufwise-platform-backend"
version = "0.1.0"
description = "Governed agent runtime — control plane API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # The control plane primitive. During local dev, install the sibling repo editable:
    #   pip install -e ../../laufwise
    # Pinned here once published:
    # "laufwise>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",        # FastAPI TestClient
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]